# ai-practice

./: 01_simple_LLM.py  02_simple_LLM_Azure.py  03_semantic_search_LLM_Azure.py  pyproject.toml
computer-vision/: image-analyze.py
mslearn-ai-language-main/Labfiles/01-analyze-text/Python/text-analysis/: text-analysis.py
mslearn-ai-language-main/Labfiles/02-qna/Python/qna-app/: qna-app.py
mslearn-ai-language-main/Labfiles/03-language/Python/clock-client/: clock-client.py
mslearn-ai-language-main/Labfiles/04-text-classification/Python/classify-text/: classify-text.py
mslearn-ai-language-main/Labfiles/06b-translator-sdk/Python/translate-text/: translate.py
mslearn-ai-services-main/Labfiles/01-use-azure-ai-services/Python/rest-client/: rest-client.py
mslearn-ai-services-main/Labfiles/02-ai-services-security/: rest-test.cmd  rest-test.sh
mslearn-ai-vision-main/Labfiles/01-analyze-images/Python/image-analysis/: image-analysis.py
mslearn-ai-vision-main/Labfiles/02-image-classification/: replace.ps1
mslearn-ai-vision-main/Labfiles/02-image-classification/training-images/: training_labels.json
mslearn-ai-vision-main/Labfiles/04-face/Python/computer-vision/: detect-people.py
mslearn-ai-vision-main/Labfiles/04-face/Python/face-api/: analyze-faces.py
mslearn-ai-vision-main/Labfiles/05-ocr/Python/read-text/: read-text.py
