[tool.poetry]
name = "ai-practice"
version = "0.1.0"
description = ""
authors = ["Jehyun Jung <congmul@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
openai = "^1.57.4"
langchain = "^0.3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
